Updated Paper to 1.21.1 & Added player data clear feature