@@ -17,16 +17,12 @@ import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.ClickType;
 import org.bukkit.event.inventory.InventoryAction;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.BundleMeta;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.SortedSet;
-import java.util.stream.Collectors;
 
 public class CrateListGUI extends ExpressPaginatedGUI<CrateExpress, CrateElement> {
 	private @NotNull CrateNamespace namespace;
@@ -73,7 +69,8 @@ public class CrateListGUI extends ExpressPaginatedGUI<CrateExpress, CrateElement
 			CrateNamespace namespace = (CrateNamespace) crateElement;
 			SortedSet<CrateElement> content = namespace.listContent();
 			ItemStack item = new ItemBuilder(Material.BUNDLE, content.size(), this.i18n("menu.list.namespace", "namespace", namespace.getName()), this.i18nLines("menu.list.enter-namespace")).build();
-			BundleMeta meta = (BundleMeta) item.getItemMeta();
+			// FIXME Not working anymore in 1.21.1...
+			/*BundleMeta meta = (BundleMeta) item.getItemMeta();
 			if (meta != null) {
 				meta.setItems(content.stream().map(child -> {
 					if (child.isCrate())
@@ -84,7 +81,13 @@ public class CrateListGUI extends ExpressPaginatedGUI<CrateExpress, CrateElement
 				}).filter(Objects::nonNull).collect(Collectors.toList()));
 				meta.addItemFlags(ItemFlag.values());
 				item.setItemMeta(meta);
-			}
+				// java.lang.NullPointerException: Cannot read field "handle" because "stack" is null
+				//	at org.bukkit.craftbukkit.inventory.CraftItemStack.asNMSCopy(CraftItemStack.java:98) ~[paper-1.21.1.jar:1.21.1-128-d348cb8]
+				//	at org.bukkit.craftbukkit.inventory.CraftMetaBundle.applyToItem(CraftMetaBundle.java:72) ~[paper-1.21.1.jar:1.21.1-128-d348cb8]
+				//	at org.bukkit.craftbukkit.inventory.CraftItemStack.setItemMeta(CraftItemStack.java:432) ~[paper-1.21.1.jar:1.21.1-128-d348cb8]
+				//	at org.bukkit.craftbukkit.inventory.CraftItemStack.setItemMeta(CraftItemStack.java:404) ~[paper-1.21.1.jar:1.21.1-128-d348cb8]
+				//	at org.bukkit.inventory.ItemStack.setItemMeta(ItemStack.java:650) ~[paper-mojangapi-1.21.1-R0.1-SNAPSHOT.jar:?]
+			}*/
 			ItemUtils.addLore(item, this.i18n("menu.list.namespace-path", "path", namespace.getPath()));
 			return item;
 		}
@@ -100,10 +103,10 @@ public class CrateListGUI extends ExpressPaginatedGUI<CrateExpress, CrateElement
 			item = key.getItem().clone();
 		List<UnloadableWorldLocation> locations = crate.getLocations();
 		ItemUtils.addLore(item, locations == null || locations.isEmpty() ? this.i18nLines("menu.list.no-location") : locations.size() == 1 ? this.i18nLines("menu.list.location",
-				"world", locations.get(0).getWorldName(),
-				"x", locations.get(0).getBlockX(),
-				"y", locations.get(0).getBlockY(),
-				"z", locations.get(0).getBlockZ()
+				"world", locations.getFirst().getWorldName(),
+				"x", locations.getFirst().getBlockX(),
+				"y", locations.getFirst().getBlockY(),
+				"z", locations.getFirst().getBlockZ()
 		) : this.i18nLines("menu.list.multiple-locations", "count", locations.size()));
 		ItemUtils.addLoreConditionally(crate.isDisabled(), item, this.i18n("menu.list.disabled"));
 		ItemUtils.addLoreConditionally(crate.isNoPreview(), item, this.i18n("menu.list.no-preview"));
